exports[`InputGroup should match snapshot 1`] = `
<div
  className="input-group" />
`;

exports[`InputGroup should take regular element attributes 1`] = `
<div
  className="input-group my-class" />
`;
